[project]
name = "biomedparse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.0",
    "cython>=3.1.2",
    "deepspeed>=0.17.4",
    "detectron2",
    "diffdist>=0.1",
    "einops>=0.8.1",
    "ftfy>=6.3.1",
    "fvcore>=0.1.5.post20221221",
    "infinibatch>=0.1.1",
    "ipykernel>=6.30.1",
    "json-tricks>=3.17.3",
    "kornia>=0.8.1",
    "mpi4py>=4.1.0",
    "mup>=1.0.0",
    "nibabel>=5.3.2",
    "nltk>=3.9.1",
    "numpy>=2.2.6",
    "open-clip-torch>=3.1.0",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "pycocotools>=2.0.10",
    "pydicom>=3.0.1",
    "pyyaml>=6.0.2",
    "regex>=2025.7.34",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.7.1",
    "sentencepiece>=0.2.0",
    "simpleitk>=2.5.2",
    "timm>=1.0.19",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=4.55.0",
    "vision-datasets>=1.0.21",
    "yacs>=0.1.8",
]

#[tool.uv.sources]
#detectron2 = { git = "https://github.com/facebookresearch/detectron2.git" }
